# etch

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  tsconfig.base.json
crates/etch-cli/: Cargo.toml
crates/etch-cli/src/: config.rs  main.rs  npm.rs  plugin.rs
crates/etch-core/: Cargo.toml
crates/etch-core/benches/: parse_render.rs
crates/etch-core/src/: ast.rs  lib.rs
crates/etch-core/src/math/: ir.rs  lexer.rs  mathml.rs  mod.rs  parser.rs  symbols.rs
crates/etch-core/src/parser/: attributes.rs  blockquote.rs  code_block.rs  comment.rs  definition_list.rs  directive.rs  footnote.rs  frontmatter.rs  heading.rs  inline.rs  list.rs  mod.rs  paragraph.rs  table.rs  thematic_break.rs
crates/etch-core/src/render/: html.rs  mod.rs
crates/etch-core/tests/: corpus_tests.rs
crates/etch-core/tests/snapshots/: corpus_tests__core-blockquotes-basic.snap  corpus_tests__core-blockquotes-multi-paragraph.snap  corpus_tests__core-blockquotes-nested.snap  corpus_tests__core-blockquotes-with-attribution.snap  corpus_tests__core-blockquotes-with-formatting.snap  corpus_tests__core-code-blocks-backticks-inside.snap  corpus_tests__core-code-blocks-basic.snap  corpus_tests__core-code-blocks-empty.snap  corpus_tests__core-code-blocks-with-etch-inside.snap  corpus_tests__core-code-blocks-with-language.snap  corpus_tests__core-definition-lists-basic.snap  corpus_tests__core-definition-lists-multiple-defs.snap  corpus_tests__core-definition-lists-multiple-terms.snap  corpus_tests__core-definition-lists-with-formatting.snap  corpus_tests__core-footnotes-basic.snap  corpus_tests__core-footnotes-multi-paragraph.snap  corpus_tests__core-footnotes-multiple.snap  corpus_tests__core-footnotes-named.snap  corpus_tests__core-hard-line-breaks-backslash.snap  corpus_tests__core-hard-line-breaks-in-blockquote.snap  corpus_tests__core-headings-all-levels.snap  (+128 more)
crates/etch-wasm/: Cargo.toml
crates/etch-wasm/pkg/: etch_wasm_loader.js  package.json
crates/etch-wasm/src/: lib.rs
(+195 files in other folders)
