[package]
name = "etch-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "etch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs = "5.0.1"
etch-core = { path = "../etch-core" }
flate2 = "1.1.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
tempfile = "3.23.0"
