[package]
name = "etch-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for the Etch markup parser and HTML renderer"
repository = "https://github.com/etch-markup/etch"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
etch-core = { path = "../etch-core" }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.81"
serde-wasm-bindgen = "0.6.5"
serde = "1.0.228"
serde_json = "1.0.149"
wasm-bindgen = "0.2.114"

[features]
default = ["console_error_panic_hook"]
