[package]
name = "etch-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for the Etch markup parser and HTML renderer"
repository = "https://github.com/etch-markup/etch"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
etch-core = { path = "../etch-core" }
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.114"

[features]
default = []
console-error-panic-hook = ["dep:console_error_panic_hook"]
